[gd_scene load_steps=47 format=3 uid="uid://bthq5vg68i2lm"]

[ext_resource type="Script" uid="uid://cf7jm4csr2xwu" path="res://object_scenes/entity/enemy_scenes/mimic/mimic.gd" id="1_dcghv"]
[ext_resource type="Texture2D" uid="uid://bfqu4i3lpr4xn" path="res://object_scenes/entity/enemy_scenes/mimic/sprite.png" id="1_tg52t"]
[ext_resource type="PackedScene" uid="uid://meikam2oyy13" path="res://object_scenes/entity/components/health_component.tscn" id="2_ki7kb"]
[ext_resource type="Texture2D" uid="uid://duwtxpp7pht8c" path="res://object_scenes/entity/enemy_scenes/mimic/stab.png" id="3_vpjno"]
[ext_resource type="Script" uid="uid://1b40bx8yjosq" path="res://object_scenes/specialResource/lootTables/LootTable.gd" id="3_xqe57"]
[ext_resource type="Script" uid="uid://cibriy4spaxs8" path="res://object_scenes/specialResource/lootTables/RollableItem.gd" id="4_mhdw4"]
[ext_resource type="PackedScene" uid="uid://c05kukkqfrg40" path="res://object_scenes/entity/components/hitbox.tscn" id="5_6kqn5"]
[ext_resource type="PackedScene" uid="uid://84sah16y8gwq" path="res://object_scenes/entity/components/delete_me_outside_of_chunk.tscn" id="5_sycl1"]
[ext_resource type="PackedScene" uid="uid://8jw6pruiu3cf" path="res://object_scenes/entity/components/hurtbox.tscn" id="6_vgw5h"]

[sub_resource type="Resource" id="Resource_qqf2t"]
script = ExtResource("4_mhdw4")
id = 3033
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_6er51"]
script = ExtResource("4_mhdw4")
id = 3034
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_mqx2q"]
script = ExtResource("4_mhdw4")
id = 3036
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_3w52b"]
script = ExtResource("4_mhdw4")
id = 3038
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_u50pf"]
script = ExtResource("4_mhdw4")
id = 3066
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_3crnm"]
script = ExtResource("4_mhdw4")
id = 3067
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_sjoa6"]
script = ExtResource("4_mhdw4")
id = 3068
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_x86q8"]
script = ExtResource("4_mhdw4")
id = 3069
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_puh3t"]
script = ExtResource("4_mhdw4")
id = 3070
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_ffi5u"]
script = ExtResource("4_mhdw4")
id = 3071
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_v7vrn"]
script = ExtResource("4_mhdw4")
id = 3072
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_7gpm7"]
script = ExtResource("4_mhdw4")
id = 3137
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_mhdrb"]
script = ExtResource("4_mhdw4")
id = 3138
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_ukh2j"]
script = ExtResource("4_mhdw4")
id = 3139
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_lwnt8"]
script = ExtResource("4_mhdw4")
id = 3140
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_6lpbr"]
script = ExtResource("4_mhdw4")
id = 3141
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_y57gj"]
script = ExtResource("4_mhdw4")
id = 3142
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_knnua"]
script = ExtResource("4_mhdw4")
id = 3147
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_aar2u"]
script = ExtResource("4_mhdw4")
id = 3159
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_4mub4"]
script = ExtResource("4_mhdw4")
id = 3161
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_vos5o"]
script = ExtResource("4_mhdw4")
id = 3162
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_6bsyt"]
script = ExtResource("4_mhdw4")
id = 3197
amountMin = 1
amountMax = 1
weight = 1

[sub_resource type="Resource" id="Resource_8luun"]
script = ExtResource("3_xqe57")
rollType = 0
rollCount = 1
table = Array[ExtResource("4_mhdw4")]([SubResource("Resource_qqf2t"), SubResource("Resource_6er51"), SubResource("Resource_mqx2q"), SubResource("Resource_3w52b"), SubResource("Resource_u50pf"), SubResource("Resource_3crnm"), SubResource("Resource_sjoa6"), SubResource("Resource_x86q8"), SubResource("Resource_puh3t"), SubResource("Resource_ffi5u"), SubResource("Resource_v7vrn"), SubResource("Resource_7gpm7"), SubResource("Resource_mhdrb"), SubResource("Resource_ukh2j"), SubResource("Resource_lwnt8"), SubResource("Resource_6lpbr"), SubResource("Resource_y57gj"), SubResource("Resource_knnua"), SubResource("Resource_aar2u"), SubResource("Resource_4mub4"), SubResource("Resource_vos5o"), SubResource("Resource_6bsyt")])

[sub_resource type="CircleShape2D" id="CircleShape2D_xb1h5"]
radius = 3.9

[sub_resource type="AtlasTexture" id="AtlasTexture_ewa8h"]
atlas = ExtResource("1_tg52t")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvaqn"]
atlas = ExtResource("1_tg52t")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqloc"]
atlas = ExtResource("1_tg52t")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0cb5"]
atlas = ExtResource("1_tg52t")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1wpb"]
atlas = ExtResource("1_tg52t")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8s40"]
atlas = ExtResource("1_tg52t")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3t4s"]
atlas = ExtResource("1_tg52t")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep00u"]
atlas = ExtResource("1_tg52t")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_jju4s"]
atlas = ExtResource("1_tg52t")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1jq2"]
atlas = ExtResource("1_tg52t")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jqoq"]
atlas = ExtResource("3_vpjno")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_iptow"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewa8h")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvaqn")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqloc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0cb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1wpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8s40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8s40")
}],
"loop": false,
"name": &"popout",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3t4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ep00u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jju4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1jq2")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jqoq")
}],
"loop": true,
"name": &"stab",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsqwh"]
size = Vector2(8, 14)

[node name="Mimic" type="CharacterBody2D" node_paths=PackedStringArray("healthComp")]
collision_layer = 128
script = ExtResource("1_dcghv")
healthComp = NodePath("HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("2_ki7kb")]
maxHealth = 25
defense = 10
loottable = SubResource("Resource_8luun")
moneyToDrop = 50

[node name="DeleteMeOutsideOfChunk" parent="." instance=ExtResource("5_sycl1")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xb1h5")

[node name="axis" type="Node2D" parent="."]

[node name="sprite" type="AnimatedSprite2D" parent="axis"]
sprite_frames = SubResource("SpriteFrames_iptow")
animation = &"popout"
autoplay = "default"
offset = Vector2(0, -8)

[node name="floorCast" type="RayCast2D" parent="axis"]
target_position = Vector2(0, 6)

[node name="wall" type="RayCast2D" parent="axis"]
target_position = Vector2(5, 0)

[node name="Hitbox" parent="axis" node_paths=PackedStringArray("healthComponent", "colliderShape") instance=ExtResource("5_6kqn5")]
healthComponent = NodePath("../../HealthComponent")
colliderShape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="axis/Hitbox"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_lsqwh")

[node name="Hurtbox" parent="axis" instance=ExtResource("6_vgw5h")]
damage = 20
enemyName = "mimic"

[node name="CollisionShape2D" type="CollisionShape2D" parent="axis/Hurtbox"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_lsqwh")

[node name="playerFinder" type="RayCast2D" parent="."]

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
